[metadata]
name = networking-dpm
summary = OpenStack Neutron mechanism driver and agent for IBM z Systems PR/SM hypervisor in DPM mode
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_dpm

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_dpm/locale
domain = networking_dpm

[update_catalog]
domain = networking_dpm
output_dir = networking_dpm/locale
input_file = networking_dpm/locale/networking_dpm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_dpm/locale/networking_dpm.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[entry_points]
console_scripts =
    neutron-dpm-agent = networking_dpm.cmd.eventlet.dpm_neutron_agent:main
oslo.config.opts =
    networking_dpm = networking_dpm.ml2.config:list_opts
neutron.ml2.mechanism_drivers =
    dpm = networking_dpm.ml2.mech_dpm:DPMMechanismDriver

